--- a/Splint/en.lproj/MainStoryboard.storyboard
+++ b/Splint/en.lproj/MainStoryboard.storyboard
@@ -28,16 +28,16 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJ3-jG-cCg">
-                                            <rect key="frame" x="20" y="29" width="189" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJ3-jG-cCg">
+                                            <rect key="frame" x="30" y="29" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.1960784314" green="0.30980392159999998" blue="0.52156862749999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKu-ML-IdC">
-                                            <rect key="frame" x="264" y="29" width="42" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKu-ML-IdC">
+                                            <rect key="frame" x="258" y="29" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -51,6 +51,7 @@
                                     <constraint firstAttribute="centerY" secondItem="OJ3-jG-cCg" secondAttribute="centerY" id="Gxj-kf-e41"/>
                                     <constraint firstAttribute="trailing" secondItem="LKu-ML-IdC" secondAttribute="trailing" constant="20" id="HkW-s0-afq"/>
                                     <constraint firstAttribute="centerY" secondItem="LKu-ML-IdC" secondAttribute="centerY" id="QSE-09-rFb"/>
+                                    <constraint firstItem="OJ3-jG-cCg" firstAttribute="leading" secondItem="MFR-SR-M9T" secondAttribute="leading" constant="30" id="aud-nh-utT"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="timeView" destination="LKu-ML-IdC" id="gfM-DY-PvR"/>
